Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8264

lfs setstripe without -p pool_name doesn't inherit pool from parent/ROOT directory

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.11.0, Lustre 2.10.4
    • Lustre 2.9.0, Lustre 2.10.1, Lustre 2.10.4
    • 3
    • 9223372036854775807

      Actually exactly sure of if this is bug, as a doubt filing this bug. Please adviced. Here is use case or more details about it.

      Say I have 4 osts on my setup and created pool with 2 osts assign to it

      lctl pool_new lustre.pool ;
      lctl pool_add lustre.pool lustre-OST0000 lustre-OST0001 ; 
      mkdir /mnt/lustre/test_pool
      lfs setstripe -c -1 -p lustre.pool /mnt/lustre/test_pool 
      

      Now I can create file in that by following two ways

       case1: lfs setstripe -c 3 -p lustre.pool /mnt/lustre/test_pool/test1
       case2: lfs setstripe -c 3  /mnt/lustre/test_pool/test2 
      

      Here in case 1 we trim the strip count to 2 as pool has 2 osts
      But in case 2 we allow stripe count 3
      So question is case2 is expected behaviour or bug (as test_pool is assigned to pool) ?

      Following text taken from admin guide.

      Several lfs commands can be run with OST pools. Use the lfs setstripe command to associate a directory with an OST pool. This causes all new regular files and directories in the directory to be created in the pool. The lfs command can be used to list pools in a file system and OSTs in a named pool.
      

            hongchao.zhang Hongchao Zhang
            520557 Rahul Deshmukh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: