lustre/lod/lod_qos.c
@@ -1787,9 +1787,13 @@ static int lod_qos_parse_config(const struct lu_env *env,
 
 	lo->ldo_stripe_offset = v1->lmm_stripe_offset;
 
-	lod_object_set_pool(lo, NULL);
-	if (pool_name != NULL) {
+	if (pool_name != NULL || lo->ldo_pool != NULL) {
 		struct pool_desc *pool;
+
+		if (pool_name == NULL && lo->ldo_pool != NULL)
+			pool_name = lo->ldo_pool;
+		else if (pool_name != NULL)
+			lod_object_set_pool(lo, pool_name);
 
 		/* In the function below, .hs_keycmp resolves to
 		 * pool_hashkey_keycmp() */
@@ -1813,8 +1817,6 @@ static int lod_qos_parse_config(const struct lu_env *env,
 
 			lod_pool_putref(pool);
 		}
-
-		lod_object_set_pool(lo, pool_name);
 	}
 
 	/* fixup for released file */
